--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -15,31 +15,25 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: recursive   # ✅ This makes sure hugo-coder theme is cloned
-          fetch-depth: 0          # ✅ Full history required for submodules
-
-      - name: Init submodules (safety net)
-        run: git submodule update --init --recursive
 
       - name: Install Hugo CLI
         run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.128.2/hugo_extended_0.128.2_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+          wget -O ${{ runner.temp }}/hugo.deb \
+          https://github.com/gohugoio/hugo/releases/download/v0.128.2/hugo_extended_0.128.2_linux-amd64.deb
+          sudo dpkg -i ${{ runner.temp }}/hugo.deb
 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
+      - name: Download Hugo Modules
+        run: hugo mod tidy
 
       - name: Build with Hugo
         run: hugo --gc --minify
